# htmlTableReverser

./: README.md  pyproject.toml
html_table_tools/: html_table_rotator.py
tests/: basic_test.html  basic_test.out.html  empty_table_test.html  empty_table_test_output.html  input.html  jscript_test.html  jscript_test_output.html  large_table_test.html  large_table_test_output.html  multiple_tables_test.html  no_header_test.html  no_header_test_output.html  no_table_found_test.html  test_html_table_rotator.py
