[tool.poetry]
name = "confluence_table_rotator"
version = "0.1.0"
description = ""
authors = ["Sandor BERCZI <berczi.sandor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
pandas = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
